[package]
name    = "flock"
version = "0.1.0"

authors = ["Zachary Kohnen <z.kohnen@aeroteameindhoven.nl>"]
edition = "2021"
publish = false

[profile.dev.package."*"]
opt-level = 2

[dependencies]
eframe             = { version = "0.22.0", features = ["wayland", "wgpu"] }
ffmpeg-next        = "6.0.0"
ffmpeg-sidecar     = "0.4.1"
nix                = { version = "0.26.2", default-features = false, features = ["process", "signal"] }
tracing            = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
video-rs           = { version = "0.4.0", features = ["ndarray"] }
