[package]
name    = "flock"
version = "0.1.0"

authors = ["Zachary Kohnen <z.kohnen@aeroteameindhoven.nl>"]
edition = "2021"
publish = false

[profile.dev.package."*"]
opt-level = 2

[dependencies]
eframe             = { version = "0.25.0", features = ["wayland", "wgpu"] }
pollster           = "0.3.0"
tracing            = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
