[package]
name    = "flock"
version = "0.1.0"

authors = ["Zachary Kohnen <z.kohnen@aeroteameindhoven.nl>"]
edition = "2021"
publish = false

[profile.dev.package."*"]
opt-level = 2

[dependencies]
eframe             = { version = "0.30.0", features = ["wayland", "wgpu"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tracing            = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
tungstenite = "0.26.1"
